fixed text overflows

--- a/style.css
+++ b/style.css
@@ -67,9 +67,9 @@ body{
 }
 
 .output_display {
+    overflow: hidden;
     width: 100%;
     height: 100%;
-    font-size: 10vh;
     display: flex;
     text-align: center;
     align-items: center;
@@ -85,6 +85,7 @@ body{
 }
 
 #display {
+    overflow-x: hidden;
     grid-column-start: 1;
     grid-column-end: 4;
     text-align: right;
@@ -205,6 +206,10 @@ button:focus {
     overflow: hidden;
     user-select: none;
 
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    word-break: break-all;
+
     transition: color 100ms cubic-bezier(0.23, 1, 0.320, 1);
 }
 
@@ -216,6 +221,10 @@ button:focus {
     justify-content: right;
     text-align: center;
     font-size: 3vh;
+
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    word-break: break-all;
 
     transition: color 100ms cubic-bezier(0.23, 1, 0.320, 1);
 }
